<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:padding="20dp"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/task_text"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/rounded_corner"
        android:id="@+id/task_name"
        android:hint="@string/hint_text"
        android:inputType="textShortMessage"
        android:padding="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center">

        <TextView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:gravity="center"
            android:text="@string/set_time"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:id="@+id/task_time"
            android:text="@string/default_time"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="20sp"/>

        <ImageButton
            android:id="@+id/set_task_time"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@mipmap/clock_icon" />
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/add_task_button"
        android:text="@string/add"
        android:gravity="center"
        android:background="@drawable/submit_box"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/white"/>

</LinearLayout>