<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/rounded_corner"
    android:padding="10dp"
    android:layout_marginBottom="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/task_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_listitem_string"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/taskdate_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_listitem_string"
        app:layout_constraintStart_toStartOf="@+id/task_textView"
        app:layout_constraintTop_toBottomOf="@+id/task_textView" />

    <TextView
        android:id="@+id/tasktime_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="130dp"
        android:text="@string/time_listitem_string"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/task_textView" />

    <ImageButton
        android:id="@+id/complete_button"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginEnd="10dp"
        android:background="@mipmap/complete_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>